--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -360,6 +360,7 @@ pdfkeywords={}
 
 \newcommand{\mysetminus}{\mathbin{\mathchoice{\mysetminusD}{\mysetminusT}{\mysetminusS}{\mysetminusSS}}}
 
+\newcommand{\defi}{\stackrel{\mathrm{def}}{\equiv}}
 
 
 \begin{document}
@@ -469,140 +470,160 @@ $s_{U} \in \mathcal{A}_{X}(U)=A$が$s_{U}|_{U\cap V} = s_{U}|_{\varnothing} = 0 
 \Remark{
 $\mathcal{B}$を位相空間$X$の開基で有限交叉で閉じているものとする。(つまり任意の$U,V\in \mathcal{B}$に対して$U\cap V \in \mathcal{B}$.\ e.g. $\text{Spec}\, A$の開基$\{D(f)\}_f$)
 このとき$\mathcal{B}$-前層($\mathcal{B}\text{-presheaf}$)\\$\mathcal{F}_0$とは
-  \begin{itemize}
-    \item[---] $U\in \mathcal{B}$に対して$\mathcal{F}_0(U)$はアーベル群。
-    \item[---] $V\subset U \in \mathcal{B}$に対して群準同型$\rho_{U,V}:\mathcal{F}_0(U) \to \mathcal{F}_0(V)$が定まる。
-  \end{itemize}
-  としたもの。\\
+\begin{itemize}
+  \item[---] $U\in \mathcal{B}$に対して$\mathcal{F}_0(U)$はアーベル群。
+  \item[---] $V\subset U \in \mathcal{B}$に対して群準同型$\rho_{U,V}:\mathcal{F}_0(U) \to \mathcal{F}_0(V)$が定まる。
+\end{itemize}
+としたもの。\\
 $\mathcal{B}$-層($\mathcal{B}\text{-sheaf}$)$\mathcal{F}_0$から$X$上の層$\mathcal{F}$を作ることができる。\\
-  位相空間$X$の任意の開集合$U$をとり、$\{U_{i}\}_{i}$をその開被覆とする。($U_{i} \in \mathcal{B}$)
-  \begin{equation*}
-    \mathcal{F}(U):=\left\{(s_{i})_{i} \in \prod_{i}\mathcal{F}_0(U_{i})\ \Biggl|\ 任意のi,jに対してs_{i}|_{U_{i} \cap U_{j}} = s_{j}|_{U_{i} \cap U_{j}}\right\}
-  \end{equation*}
-  と定義する。するとこれは開被覆によらない。実際$\mathcal{F}(U)_{U_i}$を開被覆$\{U_{i}\}_{i}$による$\mathcal{F}(U)$とし、$\{V_{j}\}_{j}$を別の開被覆とすると、
+位相空間$X$の任意の開集合$U$をとり、$\{U_{i}\}_{i}$をその開被覆とする。($U_{i} \in \mathcal{B}$)
+\begin{equation*}
+  \mathcal{F}(U):=\left\{(s_{i})_{i} \in \prod_{i}\mathcal{F}_0(U_{i})\ \Biggl|\ 任意のi,jに対してs_{i}|_{U_{i} \cap U_{j}} = s_{j}|_{U_{i} \cap U_{j}}\right\}
+\end{equation*}
+と定義する。するとこれは開被覆によらない。実際$\mathcal{F}(U)_{U_i}$を開被覆$\{U_{i}\}_{i}$による$\mathcal{F}(U)$とし、$\{V_{j}\}_{j}$を別の開被覆とすると、
 $\{U_{i}\cap V_{j}\}_{i,j}$はこれら2つの細分である。$\mathcal{F}(U)_{U_i} \to \mathcal{F}(U)_{U_{i}\cap V_{j}}$なる群準同型を
 $(s_{i})_{i}\mapsto (s_{i}|_{U_{i}\cap V_{j}})_{i,j}$で定義できる。実際
-  \begin{align*}
-    s_{i} |_{U_{i} \cap V_{j}}\Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})}
-     & = s_{i} \Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})}                                                                              \\
-     & = s_{i} |_{U_{i}\cap U_{i'}}\Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})}                                                          \\
-     & = s_{i'} |_{U_{i}\cap U_{i'}}\Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})} \quad (\because (s_{i})_{i} \in \mathcal{F}(U)_{U_{i}}) \\
-     & = s_{i'} \Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})}                                                                             \\
-     & = s_{i'} |_{U_{i'} \cap V_{j'}}\Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})}
-  \end{align*}
-  より$(s_{i}|_{U_{i}\cap V_{j}})_{i,j}\in \mathcal{F}(U)_{U_{i} \cap V_{j}}$\\
-  また、$(s_{ij})_{ij}\in \mathcal{F}(U)_{U_{i}\cap V_{j}}$を取ると、
+\begin{align*}
+  s_{i} |_{U_{i} \cap V_{j}}\Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})}
+    & = s_{i} \Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})}                                                                              \\
+    & = s_{i} |_{U_{i}\cap U_{i'}}\Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})}                                                          \\
+    & = s_{i'} |_{U_{i}\cap U_{i'}}\Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})} \quad (\because (s_{i})_{i} \in \mathcal{F}(U)_{U_{i}}) \\
+    & = s_{i'} \Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})}                                                                             \\
+    & = s_{i'} |_{U_{i'} \cap V_{j'}}\Bigl|_{(U_{i} \cap V_{j}) \cap (U_{i'} \cap V_{j'})}
+\end{align*}
+より$(s_{i}|_{U_{i}\cap V_{j}})_{i,j}\in \mathcal{F}(U)_{U_{i} \cap V_{j}}$\\
+また、$(s_{ij})_{ij}\in \mathcal{F}(U)_{U_{i}\cap V_{j}}$を取ると、
 $(s_{ij})_{ij} = (s_{i}|_{U_{i} \cap V_{j}})$と出来るので全射(？？？？？)\\
-  Kernelを計算すると
-  \begin{align*}
-     & s_{i}|_{U_{i}\cap V_{j}} = 0 \quad (\forall i,j)                \\
-     & s_{i}|_{U_{i}}=s_{i} = 0 \quad (\forall i) \quad (\because (4))
-  \end{align*}
-  よってKernelが自明なので単射。
-  % $\mathcal{U}=\{U_{i}\}_{i}$を$X$の部分開集合族とする。$U=\cup_{i}U_{i},U_{ij}=U_{i}\cap U_{j}$
-  }{}
+Kernelを計算すると
+\begin{align*}
+    & s_{i}|_{U_{i}\cap V_{j}} = 0 \quad (\forall i,j)                \\
+    & s_{i}|_{U_{i}}=s_{i} = 0 \quad (\forall i) \quad (\because (4))
+\end{align*}
+よってKernelが自明なので単射。
+% $\mathcal{U}=\{U_{i}\}_{i}$を$X$の部分開集合族とする。$U=\cup_{i}U_{i},U_{ij}=U_{i}\cap U_{j}$
+}{}
 
 
-  \Definition{
-    位相空間$X$上の前層$\mathcal{F}$と$x\in X$に対して、$x$での$\mathcal{F}$の\textbf{茎(stalk)}$\mathcal{F}_{x}$という群が定義できる。
-    \begin{equation*}
-      \mathcal{F}_{x} = \varinjlim_{U \ni x}\mathcal{F}(U)
-    \end{equation*}
-    ただし、$U$は$x$の開近傍をすべてを回る。$U$上の切断$s\in \mathcal{F}(U)$に対して
-    $x\in U$の茎$\mathcal{F}_{x}$への自然な群準同型の像を$s_{x}$と書いて、$x$での$s$の\textbf{芽(germ)}という。
-  }
-  \Lemma{
+\Definition{
+  位相空間$X$上の前層$\mathcal{F}$と$x\in X$に対して、$x$での$\mathcal{F}$の\textbf{茎(stalk)}$\mathcal{F}_{x}$という群が定義できる。
+  \begin{equation*}
+    \mathcal{F}_{x} = \varinjlim_{U \ni x}\mathcal{F}(U)
+  \end{equation*}
+  ただし、$U$は$x$の開近傍をすべてを回る。$U$上の切断$s\in \mathcal{F}(U)$に対して
+  $x\in U$の茎$\mathcal{F}_{x}$への自然な群準同型の像を$s_{x}$と書いて、$x$での$s$の\textbf{芽(germ)}という。
+}
+\Lemma{
 $\mathcal{F}$を$X$上の層とする。$s,t \in \mathcal{F}(X)$が任意の$x \in X$に対して$s_{x} = t_{x}$ならば$s=t$
-  }{
-  差を考えれば$t=0$のときを考えればいい。$s_{x}=0\ (\forall x\in X)$とすると、$x$の開近傍$U_{x}$があって$s|_{U_{x}}=0$となる。$\{U_{x}\}_{x\in U_{x}}$は$X$の開被覆なので、$s=0$となる。
-  }
-  \Definition{
+}{
+差を考えれば$t=0$のときを考えればいい。$s_{x}=0\ (\forall x\in X)$とすると、$x$の開近傍$U_{x}$があって$s|_{U_{x}}=0$となる。$\{U_{x}\}_{x\in U_{x}}$は$X$の開被覆なので、$s=0$となる。
+}
+\Definition{
 $X$上の2つの前層$\mathcal{F,G}$とする。\textbf{前層の射}$\alpha:\mathcal{F} \to \mathcal{G}$
-  とは、$X$の開集合$U$に対して群準同型$\alpha(U):\mathcal{F}(U) \to \mathcal{G}(U)$があって、
-  任意の開集合の組$V\subset U$に対して$\alpha(V)\circ \rho_{U,V}^{\mathcal{F}} = \rho_{U,V}^{\mathcal{G}}\circ \alpha(U)$を満たすことをいう。\\
+とは、$X$の開集合$U$に対して群準同型$\alpha(U):\mathcal{F}(U) \to \mathcal{G}(U)$があって、
+任意の開集合の組$V\subset U$に対して$\alpha(V)\circ \rho_{U,V}^{\mathcal{F}} = \rho_{U,V}^{\mathcal{G}}\circ \alpha(U)$を満たすことをいう。\\
 $X$の任意の開集合$U$に対して$\alpha(U)$が単射ならば$\alpha$は単射であるという。(全射はうまくいかんっぽい？)
-  }
+}
 
 $\alpha:\mathcal{F} \to \mathcal{G}$を$X$上の前層の射とする。任意の$x \in X$に対して
 $\alpha$から自然に誘導される群準同型$\alpha_{x}:\mathcal{F}_{x} \to \mathcal{G}_{x}$で
 $(\alpha(U)(s))_{x} = \alpha_{x}(s_{x})$が$X$の任意の開集合$U,s\in \mathcal{F}(U),x\in U$で
-  成り立つものが取れる。\\
+成り立つものが取れる。\\
 $\alpha_{x}$が任意の$x\in X$で全射なら$\alpha$が全射であるという。
 
-  \Example{
-    $X=\mathbf{C} \mysetminus \{0\}$とし$\mathcal{F}$を$X$上の正則関数がなす層とし、
-    $\mathcal{G}$を$X$上の双正則関数のなす層とする。今、任意の開集合$U$と任意の$f\in \mathcal{F}(U)$に対して$\alpha(U)(f) = \exp(f)$で定義される層の射$\alpha:\mathcal{F} \to \mathcal{G}$
-    が全射であることはよく知られている。しかし$\alpha(X):\mathcal{F}(X) \to \mathcal{G}(X)$は
-    全射ではない。例えば恒等写像は$\exp(f)$と書けない。
-  }{}
-  \Proposition{
-    $\alpha:\mathcal{F} \to \mathcal{G}$を$X$上の層の射とする。
-    \begin{center}
-      $\alpha$が同型$\Leftrightarrow$ $\alpha_{x}$が同型$(\forall x \in X)$
-    \end{center}
-  }{}
-  \Theorem{
-  位相空間$X$上の前層$\mathcal{F}$に対して、前層$\mathcal{F}$の層化(sheafification)$\mathcal{F}^{\dagger}$は存在する。
-  }{
-$X$の開集合$U$に対して
-  \begin{equation*}
-    \mathcal{F}^{\dagger}(U) = \left\{\sigma: U \to \prod_{x\in U} \mathcal{F}_{x}\, \middle|\,
-    \begin{aligned}
-      \forall x\in U,x\in \exists V\subset U:\text{open},\exists s \in \mathcal{F}(V)\, \text{s.t.}\, \sigma(y) = s_{y}\, (\forall y \in V)
-    \end{aligned}
-    \right\}
-  \end{equation*}
-  とし、$V \subset U$なる開集合に対し、
-  $$
-    \begin{array}{rccc}
-      \rho_{U,V}^{\mathcal{F}^{\dagger}}: & \mathcal{F}^{\dagger}(U) & \longrightarrow & \mathcal{F}^{\dagger}(V) \\
-                                          & \rotatebox{90}{$\in$}    &                 & \rotatebox{90}{$\in$}    \\
-                                          & \sigma                   & \longmapsto     & \sigma|_{V}
-    \end{array}
-  $$
-  が定義できる。実際、任意の$x\in V$をとる。$V \subset U$であり、
-$\sigma \in \mathcal{F}^{\dagger}(U)$より
+\Example{
+  $X=\mathbf{C} \mysetminus \{0\}$とし$\mathcal{F}$を$X$上の正則関数がなす層とし、
+  $\mathcal{G}$を$X$上の双正則関数のなす層とする。今、任意の開集合$U$と任意の$f\in \mathcal{F}(U)$に対して$\alpha(U)(f) = \exp(f)$で定義される層の射$\alpha:\mathcal{F} \to \mathcal{G}$
+  が全射であることはよく知られている。しかし$\alpha(X):\mathcal{F}(X) \to \mathcal{G}(X)$は
+  全射ではない。例えば恒等写像は$\exp(f)$と書けない。
+}{}
+\Proposition{
+  $\alpha:\mathcal{F} \to \mathcal{G}$を$X$上の層の射とする。
   \begin{center}
-    $x\in \exists U_{0} \subset U$:open,$\exists s \in \mathcal{F}(U_{0})$\, s.t.\, $\sigma(y)=s_{y}\, (\forall y\in U_{0})$
+    $\alpha$が同型$\Leftrightarrow$ $\alpha_{x}$が同型$(\forall x \in X)$
   \end{center}
+}{}
+\Theorem{
+位相空間$X$上の前層$\mathcal{F}$に対して、前層$\mathcal{F}$の層化(sheafification)$\mathcal{F}^{\dagger}$は存在する。
+}{
+$X$の開集合$U$に対して
+\begin{equation*}
+  \mathcal{F}^{\dagger}(U) = \left\{\sigma: U \to \prod_{x\in U} \mathcal{F}_{x}\, \middle|\,
+  \begin{aligned}
+    \forall x\in U,x\in \exists V\subset U:\text{open},\exists s \in \mathcal{F}(V)\, \text{s.t.}\, \sigma(y) = s_{y}\, (\forall y \in V)
+  \end{aligned}
+  \right\}
+\end{equation*}
+とし、$V \subset U$なる開集合に対し、
+$$
+  \begin{array}{rccc}
+    \rho_{U,V}^{\mathcal{F}^{\dagger}}: & \mathcal{F}^{\dagger}(U) & \longrightarrow & \mathcal{F}^{\dagger}(V) \\
+                                        & \rotatebox{90}{$\in$}    &                 & \rotatebox{90}{$\in$}    \\
+                                        & \sigma                   & \longmapsto     & \sigma|_{V}
+  \end{array}
+$$
+が定義できる。実際、任意の$x\in V$をとる。$V \subset U$であり、
+$\sigma \in \mathcal{F}^{\dagger}(U)$より
+\begin{center}
+  $x\in \exists U_{0} \subset U$:open,$\exists s \in \mathcal{F}(U_{0})$\, s.t.\, $\sigma(y)=s_{y}\, (\forall y\in U_{0})$
+\end{center}
 $V_{0} = U_{0} \cap V,\quad t = s|_{V_{0}}$とすると任意の$y\in V_{0}$に対して
-  \begin{equation*}
-    \sigma(y)=\sigma|_{V}(y)=s_{y}
-  \end{equation*}
-  さらに帰納極限の定義から
-  \begin{equation*}
-    \sigma|_{V}(y)=t_{y}
-  \end{equation*}
-  次に$\rho_{U,V}^{\mathcal{F}^{\dagger}}$が準同型になっていることつまり
-  \begin{equation*}
-    \rho_{U,V}^{\mathcal{F}^{\dagger}}(\sigma + \tau) = \rho_{U,V}^{\mathcal{F}^{\dagger}}(\sigma) + \rho_{U,V}^{\mathcal{F}^{\dagger}}(\tau)
-  \end{equation*}
-  が成り立つことを示そう。
-  }
+\begin{equation*}
+  \sigma(y)=\sigma|_{V}(y)=s_{y}
+\end{equation*}
+さらに帰納極限の定義から
+\begin{equation*}
+  \sigma|_{V}(y)=t_{y}
+\end{equation*}
+次に$\mathcal{F}^{\dagger}{U}$がアーベル群、つまり
+$\sigma,\tau \in \mathcal{F}^{\dagger}(U)$ならば$\sigma+\tau \in \mathcal{F}^{\dagger}$
+を示そう。
+}
 
 
 
-  \clearpage
-  \chapter{極限}
-  とりあえず、帰納極限だけ述べる。射影極限は双対概念なのでまぁ頑張って。
-  \Definition{(帰納系の定義)\\
-  ($\Lambda,\leq$)を順序集合、$\mathscr{C}$を圏とする。各$\lambda \in \Lambda$に対し、$X_{\lambda} \in \text{Ob}(\mathscr{C})$が与えられ、
+\clearpage
+\chapter{極限}
+とりあえず、帰納極限だけ述べる。射影極限は双対概念なのでまぁ頑張って。
+\Definition{(帰納系の定義)\\
+($\Lambda,\leq$)を順序集合、$\mathscr{C}$を圏とする。各$\lambda \in \Lambda$に対し、$X_{\lambda} \in \text{Ob}(\mathscr{C})$が与えられ、
 $\lambda \leq \mu$に対して射$\varphi_{\mu,\lambda}:X_{\lambda} \to X_{\mu}$があって
   次を満たすとき、$\{X_{\lambda},\varphi_{\mu,\lambda}\}$を\textbf{順系(direct system)}または
   \textbf{帰納系(inductive system)}という。しばし$\varphi_{\mu,\lambda}$を省略して$\{X_{\lambda}\}_{\lambda \in \Lambda}$や$\{X_{\lambda}\}_{\lambda}$で表す。
   \begin{itemize}
     \item[---] 任意の$\lambda \in \Lambda$に他逸して$\varphi_{\lambda,\lambda}=\text{id}_{X_{\lambda}}$
     \item[---] $\lambda \leq \mu \leq \nu$なる任意の$\lambda,\mu,\nu \in \Lambda$に対して$\varphi_{\nu,\lambda} = \varphi_{\nu,\mu}\circ \varphi_{\mu,\lambda}$
-  \end{itemize}
-  }
-  \Definition{(帰納系の射の定義)\\
+\end{itemize}
+}
+\Example{
+  位相空間$X$の開集合族$\{U\}_{U}$に対して
+  \begin{equation*}
+    U \leq V \defi V \subset U
+  \end{equation*}
+  と定義する。そして、$\mathbf{AGrp}$をアーベル群の成す圏、$\mathcal{F}$を$X$上の前層とする。すると、各開集合$U$に対し、$\mathcal{F}(U) \in \mathrm{Ob}(\mathbf{AGrp})$で、
+  前層の定義からアーベル群と制限写像との組$\{\mathcal{F}(U),\rho_{U,V}\}$は帰納系となる。前層の定義はDef:\ref{Def:1.3.1}を参照。
+}{}
+\Definition{(帰納系の射の定義)\\
 $\Lambda$を順序集合。$\{X_{\lambda},\varphi_{\lambda,\mu}\},\{Y_{\lambda},\psi_{\lambda,\mu}\}$を$\Lambda$上の圏$\mathscr{C}$における帰納系とする。
   このとき$\{X_{\lambda}\}$から$\{Y_{\lambda}\}$への射とは$f_{\lambda}:X_{\lambda} \to Y_{\lambda}$なる射の族
 $\{f_{\lambda}\}$で、任意の$\lambda \leq \mu$に対して
 $\psi_{\lambda,\mu}\circ f_{\mu} = f_{\lambda}\circ \varphi_{\lambda,\mu}$となるものを言う。
-  %---------------後に図式を追加する。------------------%
-  }
-  \Definition{
+%---------------後に図式を追加する。------------------%
+\begin{center}
+  \begin{tikzpicture}[auto]
+    \node (X1) at (0,0) {$X_{\mu}$};
+    \node (X2) at (0,-2.5) {$X_{\lambda}$};
+    \node (Y1) at (2.5,0) {$Y_{\mu}$};
+    \node (Y2) at (2.5,-2.5) {$Y_{\lambda}$};
+    \node (ci) at (1.25,-1.25) {$\circlearrowleft$};
+
+    \draw[->] (X1) to node[yshift = -6pt,label=above:$f_{\mu}$] () {} (Y1);
+    \draw[->] (X1) to node[label=left:$\varphi_{\lambda,\mu}$] () {} (X2);
+    \draw[->] (X2) to node[yshift = -2pt,label=below:$f_{\lambda}$] () {} (Y2);
+    \draw[->] (Y1) to node[xshift = -6pt,label=right:$\psi_{\lambda,\mu}$] () {} (Y2);
+  \end{tikzpicture}
+\end{center}
+}
+\Definition{
 $\mathscr{C}$を圏とし、$\Lambda$を順序集合とする。$\{X_{\lambda},\varphi_{\mu,\lambda}\}$を
 $\mathscr{C}$の帰納系とする。\\
   このとき$\{X_{\lambda},\varphi_{\mu,\lambda}\}$の\textbf{順極限(direct limit)}または\textbf{帰納的極限(inductive limit)}または\textbf{帰納極限}とは、
