--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -361,6 +361,8 @@ pdfkeywords={}
 \newcommand{\mysetminus}{\mathbin{\mathchoice{\mysetminusD}{\mysetminusT}{\mysetminusS}{\mysetminusSS}}}
 
 \newcommand{\defi}{\stackrel{\mathrm{def}}{\equiv}}
+\renewcommand{\ker}[1]{\mathrm{Ker}\, #1}
+\newcommand{\im}[1]{\mathrm{Im}\, #1}
 
 
 \begin{document}
@@ -630,6 +632,147 @@ $$
     \rho_{U,W}^{\mathcal{G}} = \rho_{V,W}^{\mathcal{G}} \circ \rho_{U,V}^{\mathcal{G}}
   \end{equation*}
   が成り立つことは制限写像の定義から明らかである。よって$\mathcal{G}$は前層。
+}
+\Definition{
+  Lem:\ref{Lem:1.3.7}で定義した前層の層化を$\mathcal{F}/\mathcal{F}'$と書いて、\textbf{商層(quotient shaef)}という。
+}
+\Definition{
+  $\alpha:\mathcal{F} \to \mathcal{G}$を前層の射とする。このとき開集合$U$に対して
+  $U \mapsto \ker ({\alpha(U)})$とするものは$\mathcal{F}$の部分層になる。これを$\ker{\alpha}$と
+  書いて、\textbf{$\alpha$の核(kernel of $\alpha$)}という。\\
+  更に、$U\mapsto \im (\alpha(U))$は一般には前層となるので、これの層化を$\im \alpha$と書いて、
+  \textbf{$\alpha$の像(image of $\alpha$)}という。
+}
+\Lemma{
+  $\mathcal{F,G}$を$X$上の層,$\mathcal{F}'$を$\mathcal{F}$の部分層,$\alpha:\mathcal{F} \to \mathcal{G}$を前層の射とする。
+  このとき、
+  \begin{align*}
+    &(\ker \alpha)_{x} = \ker \alpha_{x}\\
+    &(\im \alpha)_{x} = \im \alpha_{x}\\
+    &(\mathcal{F}/\mathcal{F}')_{x} = \mathcal{F}_{x}/\mathcal{F}'_{x}
+  \end{align*}
+  が成り立つ。
+}{
+  任意の部分層は層の射の核としてかけるので、$\mathcal{F}'=\ker \alpha$とする。\\
+  また、$\mathcal{K}(U) = \ker (\alpha(U)),\mathcal{I}(U) = \im (\alpha(U)),\mathcal{Q}(U) = \mathcal{F}(U)/\ker (\alpha(U))$とおく。\\
+  このとき、アーベル群の完全列
+  \begin{center}
+    \begin{tikzpicture}[auto]
+      \node (01) at (0,0) {$0$};
+      \node (ker) at (2.5,0) {$\mathcal{K}(U)$};
+      \node (fu) at (5,0) {$\mathcal {F}(U)$};
+      \node (im) at (7.5,0) {$\mathcal{I}(U)$};
+      \node (02) at (10,0) {$0$};
+      
+      \draw[->] (01) to (ker);
+      \draw[->] (ker) to (fu);
+      \draw[->] (fu) to (im);
+      \draw[->] (im) to (02);
+
+      \node (03) at (0,-1) {$0$};
+      \node (im1) at (2.5,-1) {$\mathcal{I}(U)$};
+      \node (gu) at (5,-1) {$\mathcal{G}(U)$};
+      \node (qu) at (7.5,-1) {$\mathcal{Q}(U)$};
+      \node (04) at (10,-1) {$0$};
+
+      \draw[->] (03) to (im1);
+      \draw[->] (im1) to (gu);
+      \draw[->] (gu) to (qu);
+      \draw[->] (qu) to (04);
+    \end{tikzpicture}
+  \end{center}
+  が作れる。帰納極限は完全列を完全列に移すので、
+  \begin{center}
+    \begin{tikzpicture}[auto]
+      \node (01) at (0,0) {$0$};
+      \node (ker) at (2.5,0) {$\varinjlim \mathcal{K}(U)$};
+      \node (fu) at (5,0) {$\varinjlim \mathcal{F}(U)$};
+      \node (im) at (7.5,0) {$\varinjlim \mathcal{I}(U)$};
+      \node (02) at (10,0) {$0$};
+      
+      \draw[->] (01) to (ker);
+      \draw[->] (ker) to (fu);
+      \draw[->] (fu) to (im);
+      \draw[->] (im) to (02);
+
+      \node (03) at (0,-1) {$0$};
+      \node (im1) at (2.5,-1) {$\varinjlim \mathcal{I}(U)$};
+      \node (gu) at (5,-1) {$\varinjlim \mathcal{G}(U)$};
+      \node (qu) at (7.5,-1) {$\varinjlim \mathcal{Q}(U)$};
+      \node (04) at (10,-1) {$0$};
+
+      \draw[->] (03) to (im1);
+      \draw[->] (im1) to (gu);
+      \draw[->] (gu) to (qu);
+      \draw[->] (qu) to (04);
+    \end{tikzpicture}
+  \end{center}
+  を得る。よって
+  \begin{center}
+    \begin{tikzpicture}[auto]
+      \node (01) at (0,0) {$0$};
+      \node (ker) at (2.5,0) {$(\ker \alpha)_{x}$};
+      \node (fu) at (5,0) {$\mathcal{F}_{x}$};
+      \node (im) at (7.5,0) {$(\im \alpha)_{x}$};
+      \node (02) at (10,0) {$0$};
+      
+      \draw[->] (01) to (ker);
+      \draw[->] (ker) to (fu);
+      \draw[->] (fu) to (im);
+      \draw[->] (im) to (02);
+
+      \node (03) at (0,-1) {$0$};
+      \node (im1) at (2.5,-1) {$(\im \alpha)_{x}$};
+      \node (gu) at (5,-1) {$\mathcal{G}_{x}$};
+      \node (qu) at (7.5,-1) {$(\mathcal{F}/\ker \alpha)_{x}$};
+      \node (04) at (10,-1) {$0$};
+
+      \draw[->] (03) to (im1);
+      \draw[->] (im1) to (gu);
+      \draw[->] (gu) to (qu);
+      \draw[->] (qu) to (04);
+    \end{tikzpicture}
+  \end{center}
+  したがって、完全列$\mathcal{F}_{x} \longrightarrow (\im \alpha)_{x} \longrightarrow \mathcal{G}_{x}$
+  を得る。これは$\alpha_{x}$のことである。よって
+  % 次迷う
+}
+
+\Definition{
+  層の列
+  \begin{equation*}
+    \mathcal{F} \stackrel{\alpha}{\longrightarrow} \mathcal{G} \stackrel{\beta}{\longrightarrow} \mathcal{H}
+  \end{equation*}
+  が完全とは、$\im \alpha = \ker \beta$が成り立つことをいう。
+}
+\Proposition{
+  層の列に対して次が成り立つ。
+  \begin{equation*}
+    \mathcal{F} \longrightarrow \mathcal{G} \longrightarrow \mathcal{H}が完全
+    \Longleftrightarrow
+    任意のx \in Xに対して\mathcal{F}_{x} \longrightarrow \mathcal{G}_{x} \longrightarrow \mathcal{H}_{x}が完全 
+  \end{equation*}
+}{
+  明らか。
+}
+
+\Section{Ringed Topological Space}
+\Definition{
+  \textbf{局所環付き空間}とは位相空間$X$と$X$上の環の層$\mathcal{O}_{X}$の組$(X,\mathcal{O}_{X})$
+  で、任意の$x\in X$に対して$\mathcal{O}_{X,x}$が局所環となるものをいう。また、この$\mathcal{O}_{X}$
+  を$(X,\mathcal{O}_{X})$の\textbf{構造層(structure sheaf)}という。また$(X,\mathcal{O}_{X})$を単に
+  $\mathcal{O}_{X}$と書くことがある。\\
+  また、$\mathcal{O}_{X,x}$の唯一の極大イデアル$\mathfrak{m}_{x}$に対して
+  その剰余体$\mathcal{O}_{X,x}/\mathfrak{m}_{x}$を\textbf{$X$の点$x$での剰余体(residue field of X at x)}といって$k(x)$と書く。
+}
+
+\Definition{
+  局所環付き空間の射とは
+  \begin{equation*}
+    (f,f^{\#}): (X,\mathcal{O}_{X}) \to (Y,\mathcal{O}_{Y})
+  \end{equation*}
+  とは連続写像$f:X \to Y$と環の層の射$f^{\#}:\mathcal{O}_{Y} \to f_{*}\mathcal{O}_{X}$の組$(f,f^{\#})$で、
+  任意の$x\in X$に対して$f^{\#}_{x} : \mathcal{O}_{Y,f(x)} \to \mathcal{O}_{X,x}$は局所射となるものをいう。
 }
 
 
